--- a/source/index.html
+++ b/source/index.html
@@ -27,10 +27,30 @@
     <!-- main -->
     
     <main>
-        <div>Питомник</div>
-        <div>Питомник</div>
-        <div>Питомник</div>
-        <div>Питомник</div>
+
+        <!-- pets -->
+        
+        <section class="pets">
+            <div class="pets__container container">
+                <h2 class="title pets__title">Питомцы</h2>
+                <div class="pets__descr">Все представители нашего питомника имеют ветеринарный паспорт с отметками о прививках и документ с родословной</div>
+                <ul class="pets__list">
+                    <li class="pets__item active"><button>Коты</button></li>
+                    <li class="pets__item"><button>Кошки</button></li>
+                    <li class="pets__item"><button>Котята</button></li>
+                </ul>
+                <div class="pets__slider">
+                    <button class="pets__arrow pets__arrow--left"></button>
+                    <div class="pets__photo">
+                        <img src="img/Cat1.jpg" alt="Белый окрас" width="517">
+                        <img src="img/Cat3.jpg" alt="Пепельный окрас" width="471">
+                        <img src="img/Cat2.jpg" alt="Кофейный окрас" width="517">
+                    </div>
+                    <button class="pets__arrow pets__arrow--right"></button>
+                </div>
+                <a class="pets__button button">Смотреть больше</a>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
@@ -39,7 +59,7 @@
         <div class="footer__wrapper">
             <img src="img/icons/logo.svg" alt="Логотип" class="footer__logo" width="55" height="25">
             <div class="footer__contacts">
-                <ul class="footer__social social__list">
+                <ul class="footer__social social">
                     <li class="social__item social__item--fb">
                         <a href="#" aria-label="Мы в Фейсбуке">
                             <img src="img/icons/fb.svg">
