--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <div style="display:none">
+        <include src="build/img/icons/sprite.svg"></include>
+      </div>
 
     <!-- header -->
     
@@ -65,6 +68,43 @@
                 <div class="features__text">Вес может достигать 12 кг, а длина 1 м</div>
             </div>
         </section>
+
+        <!-- aboutUs -->
+
+        <section class="aboutUs">
+            <h2 class="title aboutUs__title">Почему именно мы?</h2>
+            <div class="aboutUs__subtitle">Приобретая  животное в нашем питомнике, вы получите</div>
+            <ul class="aboutUs__list">
+                <li class="aboutUs__item">
+                    <div class="aboutUs__block">
+                        <svg class="aboutUs__icon aboutUs__icon--year" width="98" height="107">
+                            <use xlink:href="#year"></use>
+                        </svg>
+                        <div class="aboutUs__text">Бесплатное ветеринарное обслуживание 5 лет</div>
+                    </div>
+                </li>
+                <li class="aboutUs__item">
+                    <div class="aboutUs__block">
+                        <svg class="aboutUs__icon aboutUs__icon--day" width="107" height="96">
+                            <use xlink:href="#day"></use>
+                        </svg>
+                        <div class="aboutUs__text">Консультирование по любому вопросу 24 часа в сутки</div>
+                    </div>
+                </li>
+                <li class="aboutUs__item">
+                    <div class="aboutUs__block">
+                        <svg class="aboutUs__icon aboutUs__icon--corm" width="71" height="108">
+                            <use xlink:href="#corm"></use>
+                        </svg>
+                        <div class="aboutUs__text">Индивидуальный подбор питания для вашего кота</div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <div>.</div>
+        <div>.</div>
+        <div>.</div>
 
     </main>
 
