--- a/source/index.html
+++ b/source/index.html
@@ -102,6 +102,34 @@
             </ul>
         </section>
 
+        <!-- care -->
+
+        <section class="care">
+            <h2 class="care__title title">Об уходе за Мейн-Куном</h2>
+            <ul class="care__list">
+                <li class="care__item">
+                    <div class="care__subtitle">Шерсть</div>
+                    <div class="care__descr">Мы разработали 8 правил, следуя которым, шерсть вашего кота всегда будет блестящей, мягкой и послушной</div>
+                    <a href="#" class="care__button"></a>
+                </li>
+                <li class="care__item">
+                    <div class="care__subtitle">Когти</div>
+                    <div class="care__descr">Нужно ли стричь когти? Это мы и выясним, плюс ко всему расскажем как подобрать идеальную когтеточку</div>
+                    <a href="#" class="care__button"></a>
+                </li>
+                <li class="care__item">
+                    <div class="care__subtitle">Уши и глаза</div>
+                    <div class="care__descr">Владельцам котов необходимо регулярно осматривать ушки и глазасвоих питомцев, ведь это может быть признаками заболевания</div>
+                    <a href="#" class="care__button"></a>
+                </li>
+                <li class="care__item">
+                    <div class="care__subtitle">Питание</div>
+                    <div class="care__descr">В нашем питомнике существует два подхода: натуральное питание и питание промышленными кормами, но выбирать только вам</div>
+                    <a href="#" class="care__button"></a>
+                </li>
+            </ul>
+        </section>
+
         <div>.</div>
         <div>.</div>
         <div>.</div>
