--- a/source/index.html
+++ b/source/index.html
@@ -43,13 +43,13 @@
                     <li class="pets__item"><button>Котята</button></li>
                 </ul>
                 <div class="pets__slider">
-                    <button class="pets__arrow pets__arrow--left"></button>
+                    <button class="pets__arrow pets__arrow--left button__arrow button__arrow--left"></button>
                     <div class="pets__photo">
                         <img src="img/Cat1.jpg" alt="Белый окрас" width="517">
                         <img src="img/Cat3.jpg" alt="Пепельный окрас" width="471">
                         <img src="img/Cat2.jpg" alt="Кофейный окрас" width="517">
                     </div>
-                    <button class="pets__arrow pets__arrow--right"></button>
+                    <button class="pets__arrow pets__arrow--right button__arrow button__arrow--right"></button>
                 </div>
                 <a class="pets__button button" href="#">Смотреть больше</a>
             </div>
@@ -130,6 +130,44 @@
             </ul>
         </section>
 
+        <!-- team -->
+
+        <section class="team">
+            <h2 class="team__title title">Наша команда</h2>
+            <div class="team__subtitle">Все сотрудники нашего питомника дипломированые специалисты в области фелинологии и ветеринарии</div>
+            <div class="team__block">
+                <img src="img/team.jpg" alt="Фото Сережи Попова" class="team__photo" width="360" height="356">
+                <div class="team__name">Серёжа Попов</div>
+                <div class="team__post">Основатель питомника</div>
+                <div class="team__descr">Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет. Мы в ответе за каждого приобретенного вами питомца</div>
+                <ul class="social team__social">
+                    <li class="social__item social__item--fb">
+                        <a href="#" aria-label="Мы в Фейсбуке">
+                            <svg width="7" height="15">
+                                <use xlink:href="#fb"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social__item social__item--tw">
+                        <a href="#" aria-label="Мы в Твиттере">
+                            <svg width="21" height="14">
+                                <use xlink:href="#tw"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social__item social__item--vk">
+                        <a href="#" aria-label="Мы в Вконтакте">
+                            <svg width="22" height="12">
+                                <use xlink:href="#vk"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <button class="team__button team__button--left button__arrow button__arrow--left"></button>
+                    <button class="team__button team__button--right button__arrow button__arrow--right"></button>
+                </ul>
+            </div>
+        </section>
+
         <div>.</div>
         <div>.</div>
         <div>.</div>
@@ -145,17 +183,23 @@
                 <ul class="footer__social social">
                     <li class="social__item social__item--fb">
                         <a href="#" aria-label="Мы в Фейсбуке">
-                            <img src="img/icons/fb.svg">
+                            <svg width="7" height="15">
+                                <use xlink:href="#fb"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="social__item social__item--tw">
                         <a href="#" aria-label="Мы в Твиттере">
-                            <img src="img/icons/tw.svg">
+                            <svg width="21" height="14">
+                                <use xlink:href="#tw"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="social__item social__item--vk">
                         <a href="#" aria-label="Мы в Вконтакте">
-                            <img src="img/icons/vk.svg">
+                            <svg width="22" height="12">
+                                <use xlink:href="#vk"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
