answers without adaptiv

--- a/source/index.html
+++ b/source/index.html
@@ -162,15 +162,64 @@
                             </svg>
                         </a>
                     </li>
-                    <button class="team__button team__button--left button__arrow button__arrow--left"></button>
-                    <button class="team__button team__button--right button__arrow button__arrow--right"></button>
                 </ul>
+                <button class="team__button team__button--left button__arrow button__arrow--left"></button>
+                <button class="team__button team__button--right button__arrow button__arrow--right"></button>
             </div>
         </section>
 
-        <div>.</div>
-        <div>.</div>
-        <div>.</div>
+        <!-- answers -->
+
+        <section class="answers">
+            <h2 class="answers__title title">Вопрос-Ответ</h2>
+            <div class="answers__subtitle">Мы ответим на самые популярные ваши вопросы</div>
+            <ol class="answers__list">
+                <li class="answers__item active">
+                    <div class="answers__question">
+                        <div class="answers__text">С какого возраста можно забирать котенка из питомника?</div>
+                        <button class="answers__button"></button>
+                    </div>
+                    <div class="answers__answer">
+                        <p>Есть важная причина, почему котенка стоит забирать домой только после трех месяцев, — это вакцинация. Первые прививки животному делают в возрасте 8 недель. Ревакцинация проводится через 3–4 недели. То есть котенок, покидающий дом позднее 12 недель, максимально защищен от различных вирусов и инфекций.
+                        </p>
+                        <p>Так что, чтобы в дома появился психически и физически здоровый котенок, игривый, жизнерадостный, самостоятельный и воспитанный, не спешите забирать его от кошки-мамы раньше трех месяцев.</p>
+                    </div>
+                </li>
+                <li class="answers__item">
+                    <div class="answers__question">
+                        <div class="answers__text">Как зарезервировать котенка?</div>
+                        <button class="answers__button"></button>
+                    </div>
+                    <div class="answers__answer">
+                        <p>Есть важная причина, почему котенка стоит забирать домой только после трех месяцев, — это вакцинация. Первые прививки животному делают в возрасте 8 недель. Ревакцинация проводится через 3–4 недели. То есть котенок, покидающий дом позднее 12 недель, максимально защищен от различных вирусов и инфекций.
+                        </p>
+                        <p>Так что, чтобы в дома появился психически и физически здоровый котенок, игривый, жизнерадостный, самостоятельный и воспитанный, не спешите забирать его от кошки-мамы раньше трех месяцев.</p>
+                    </div>
+                </li>
+                <li class="answers__item">
+                    <div class="answers__question">
+                        <div class="answers__text">Можно ли купить кота, если я живу в другом городе?</div>
+                        <div class="answers__button"></div>
+                    </div>
+                    <div class="answers__answer">
+                        <p>Есть важная причина, почему котенка стоит забирать домой только после трех месяцев, — это вакцинация. Первые прививки животному делают в возрасте 8 недель. Ревакцинация проводится через 3–4 недели. То есть котенок, покидающий дом позднее 12 недель, максимально защищен от различных вирусов и инфекций.
+                        </p>
+                        <p>Так что, чтобы в дома появился психически и физически здоровый котенок, игривый, жизнерадостный, самостоятельный и воспитанный, не спешите забирать его от кошки-мамы раньше трех месяцев.</p>
+                    </div>
+                </li>
+                <li class="answers__item">
+                    <div class="answers__question">
+                        <div class="answers__text">Как подготовить дом к приему нового питомца? </div>
+                        <button class="answers__button"></button>
+                    </div>
+                    <div class="answers__answer">
+                        <p>Есть важная причина, почему котенка стоит забирать домой только после трех месяцев, — это вакцинация. Первые прививки животному делают в возрасте 8 недель. Ревакцинация проводится через 3–4 недели. То есть котенок, покидающий дом позднее 12 недель, максимально защищен от различных вирусов и инфекций.
+                        </p>
+                        <p>Так что, чтобы в дома появился психически и физически здоровый котенок, игривый, жизнерадостный, самостоятельный и воспитанный, не спешите забирать его от кошки-мамы раньше трех месяцев.</p>
+                    </div>
+                </li>
+            </ol>
+        </section>
 
     </main>
 
