--- a/source/index.html
+++ b/source/index.html
@@ -221,6 +221,38 @@
             </ol>
         </section>
 
+        <!-- answers -->
+
+        <section class="recall">
+            <h2 class="recall__title title">Отзывы</h2>
+            <div class="recall__block">
+                <img src="img/recall.jpg" alt="Фото Сережи Попова" class="recall__photo" width="481" height="331">
+                <div class="recall__name">Серёжа Попов</div>
+                <div class="recall__descr">Я выражаю огромную благодарность вашему питомнику.  Мой Феликс невероятно умен и воспитан. Огромным плюсом питомника является возможность консультироваться в любое время</div>
+                <div class="recall__down">
+                    <div class="recall__date">24 мая 2018</div>
+                    <ul class="social recall__social">
+                        <li class="social__item social__item--tw">
+                            <a href="#" aria-label="Мы в Твиттере">
+                                <svg width="21" height="14">
+                                    <use xlink:href="#tw"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social__item social__item--vk">
+                            <a href="#" aria-label="Мы в Вконтакте">
+                                <svg width="22" height="12">
+                                    <use xlink:href="#vk"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <button class="recall__button recall__button--left button__arrow button__arrow--left"></button>
+                <button class="recall__button recall__button--right button__arrow button__arrow--right"></button>
+            </div>
+        </section>
+
     </main>
 
     <!-- footer -->
