--- a/source/index.html
+++ b/source/index.html
@@ -136,33 +136,99 @@
             <h2 class="team__title title">Наша команда</h2>
             <div class="team__subtitle">Все сотрудники нашего питомника дипломированые специалисты в области фелинологии и ветеринарии</div>
             <div class="team__block">
-                <img src="img/team.jpg" alt="Фото Сережи Попова" class="team__photo" width="360" height="356">
-                <div class="team__name">Серёжа Попов</div>
-                <div class="team__post">Основатель питомника</div>
-                <div class="team__descr">Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет. Мы в ответе за каждого приобретенного вами питомца</div>
-                <ul class="social team__social">
-                    <li class="social__item social__item--fb">
-                        <a href="#" aria-label="Мы в Фейсбуке">
-                            <svg width="7" height="15">
-                                <use xlink:href="#fb"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item social__item--tw">
-                        <a href="#" aria-label="Мы в Твиттере">
-                            <svg width="21" height="14">
-                                <use xlink:href="#tw"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social__item social__item--vk">
-                        <a href="#" aria-label="Мы в Вконтакте">
-                            <svg width="22" height="12">
-                                <use xlink:href="#vk"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                <div class="team__block-inner">
+                    <div class="team__photo-wrapper">
+                        <div class="team__photo-inner">
+                            <img class="team__photo" src="img/team.jpg" alt="Фото Сережи Попова" width="360" height="356">
+                            <img class="team__photo" src="http://placehold.it/360x356/" alt="Фото Ивана Сергеева" width="360" height="356">
+                            <img class="team__photo" src="http://placehold.it/360x356/ffcc89&text=360x356" alt="Фото Светланы Васильевой" width="360" height="356">
+                        </div>
+                    </div>
+                    <div class="team__block-content">
+                        <div class="team__name">Серёжа Попов</div>
+                        <div class="team__post">Основатель питомника</div>
+                        <div class="team__descr">Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет. Мы в ответе за каждого приобретенного вами питомца</div>
+                        <ul class="social team__social">
+                            <li class="social__item social__item--fb">
+                                <a href="#" aria-label="Мы в Фейсбуке">
+                                    <svg width="7" height="15">
+                                        <use xlink:href="#fb"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--tw">
+                                <a href="#" aria-label="Мы в Твиттере">
+                                    <svg width="21" height="14">
+                                        <use xlink:href="#tw"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--vk">
+                                <a href="#" aria-label="Мы в Вконтакте">
+                                    <svg width="22" height="12">
+                                        <use xlink:href="#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="team__block-content">
+                        <div class="team__name">Иван Сергеев</div>
+                        <div class="team__post">Менеджер</div>
+                        <div class="team__descr">Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет. Мы в ответе за каждого приобретенного вами питомца</div>
+                        <ul class="social team__social">
+                            <li class="social__item social__item--fb">
+                                <a href="#" aria-label="Мы в Фейсбуке">
+                                    <svg width="7" height="15">
+                                        <use xlink:href="#fb"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--tw">
+                                <a href="#" aria-label="Мы в Твиттере">
+                                    <svg width="21" height="14">
+                                        <use xlink:href="#tw"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--vk">
+                                <a href="#" aria-label="Мы в Вконтакте">
+                                    <svg width="22" height="12">
+                                        <use xlink:href="#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="team__block-content">
+                        <div class="team__name">Светлана Васильева</div>
+                        <div class="team__post">HR</div>
+                        <div class="team__descr">Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет. Мы в ответе за каждого приобретенного вами питомца</div>
+                        <ul class="social team__social">
+                            <li class="social__item social__item--fb">
+                                <a href="#" aria-label="Мы в Фейсбуке">
+                                    <svg width="7" height="15">
+                                        <use xlink:href="#fb"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--tw">
+                                <a href="#" aria-label="Мы в Твиттере">
+                                    <svg width="21" height="14">
+                                        <use xlink:href="#tw"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--vk">
+                                <a href="#" aria-label="Мы в Вконтакте">
+                                    <svg width="22" height="12">
+                                        <use xlink:href="#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <button class="team__button team__button--left button__arrow button__arrow--left"></button>
                 <button class="team__button team__button--right button__arrow button__arrow--right"></button>
             </div>
