class slider and slider recall

--- a/source/index.html
+++ b/source/index.html
@@ -141,7 +141,7 @@
                         <div class="team__photo-inner">
                             <img class="team__photo" src="img/team.jpg" alt="Фото Сережи Попова" width="360" height="356">
                             <img class="team__photo" src="http://placehold.it/360x356/" alt="Фото Ивана Сергеева" width="360" height="356">
-                            <img class="team__photo" src="http://placehold.it/360x356/ffcc89&text=360x356" alt="Фото Светланы Васильевой" width="360" height="356">
+                            <img class="team__photo" src="http://placehold.it/360x356/ffcc89&text=photo" alt="Фото Светланы Васильевой" width="360" height="356">
                         </div>
                     </div>
                     <div class="team__block-content">
@@ -295,32 +295,86 @@
             </ol>
         </section>
 
-        <!-- answers -->
+        <!-- recall -->
 
         <section class="recall">
             <h2 class="recall__title title">Отзывы</h2>
             <div class="recall__block">
-                <img src="img/recall.jpg" alt="Фото Сережи Попова" class="recall__photo" width="481" height="331">
-                <div class="recall__name">Серёжа Попов</div>
-                <div class="recall__descr">Я выражаю огромную благодарность вашему питомнику.  Мой Феликс невероятно умен и воспитан. Огромным плюсом питомника является возможность консультироваться в любое время</div>
-                <div class="recall__down">
-                    <div class="recall__date">24 мая 2018</div>
-                    <ul class="social recall__social">
-                        <li class="social__item social__item--tw">
-                            <a href="#" aria-label="Мы в Твиттере">
-                                <svg width="21" height="14">
-                                    <use xlink:href="#tw"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social__item social__item--vk">
-                            <a href="#" aria-label="Мы в Вконтакте">
-                                <svg width="22" height="12">
-                                    <use xlink:href="#vk"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
+                <div class="recall__photo-wrapper">
+                    <div class="recall__photo-inner">
+                        <img class="recall__photo" src="img/recall.jpg" alt="Фото Сережи Попова" width="481" height="331">
+                        <img class="recall__photo" src="http://placehold.it/481x331/&text=photo" alt="Фото Ивана Сергеева" width="481" height="331">
+                        <img class="recall__photo" src="http://placehold.it/481x331/ffcc89&text=photo" alt="Фото Светланы Васильевой" width="481" height="331">
+                    </div>
+                </div>
+                <div class="recall__block-content">
+                    <div class="recall__name">Серёжа Попов</div>
+                    <div class="recall__descr">Я выражаю огромную благодарность вашему питомнику.  Мой Феликс невероятно умен и воспитан. Огромным плюсом питомника является возможность консультироваться в любое время</div>
+                    <div class="recall__down">
+                        <div class="recall__date">24 мая 2018</div>
+                        <ul class="social recall__social">
+                            <li class="social__item social__item--tw">
+                                <a href="#" aria-label="Мы в Твиттере">
+                                    <svg width="21" height="14">
+                                        <use xlink:href="#tw"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--vk">
+                                <a href="#" aria-label="Мы в Вконтакте">
+                                    <svg width="22" height="12">
+                                        <use xlink:href="#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="recall__block-content">
+                    <div class="recall__name">Иван Сергеев</div>
+                    <div class="recall__descr">Я выражаю огромную благодарность вашему питомнику.  Мой Феликс невероятно умен и воспитан. Огромным плюсом питомника является возможность консультироваться в любое время</div>
+                    <div class="recall__down">
+                        <div class="recall__date">30 июня 2018</div>
+                        <ul class="social recall__social">
+                            <li class="social__item social__item--tw">
+                                <a href="#" aria-label="Мы в Твиттере">
+                                    <svg width="21" height="14">
+                                        <use xlink:href="#tw"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--vk">
+                                <a href="#" aria-label="Мы в Вконтакте">
+                                    <svg width="22" height="12">
+                                        <use xlink:href="#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="recall__block-content">
+                    <div class="recall__name">Светлана Васильева</div>
+                    <div class="recall__descr">Я выражаю огромную благодарность вашему питомнику.  Мой Феликс невероятно умен и воспитан. Огромным плюсом питомника является возможность консультироваться в любое время</div>
+                    <div class="recall__down">
+                        <div class="recall__date">02 февраля 2018</div>
+                        <ul class="social recall__social">
+                            <li class="social__item social__item--tw">
+                                <a href="#" aria-label="Мы в Твиттере">
+                                    <svg width="21" height="14">
+                                        <use xlink:href="#tw"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social__item social__item--vk">
+                                <a href="#" aria-label="Мы в Вконтакте">
+                                    <svg width="22" height="12">
+                                        <use xlink:href="#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <button class="recall__button recall__button--left button__arrow button__arrow--left"></button>
                 <button class="recall__button recall__button--right button__arrow button__arrow--right"></button>
