--- a/source/index.html
+++ b/source/index.html
@@ -37,17 +37,28 @@
             <div class="pets__container container">
                 <h2 class="title pets__title">Питомцы</h2>
                 <div class="pets__descr">Все представители нашего питомника имеют ветеринарный паспорт с отметками о прививках и документ с родословной</div>
-                <ul class="pets__list">
+                <!-- <ul class="pets__list">
                     <li class="pets__item active"><button>Коты</button></li>
                     <li class="pets__item"><button>Кошки</button></li>
                     <li class="pets__item"><button>Котята</button></li>
-                </ul>
+                </ul> -->
                 <div class="pets__slider">
                     <button class="pets__arrow pets__arrow--left button__arrow button__arrow--left"></button>
-                    <div class="pets__photo">
-                        <img src="img/Cat1.jpg" alt="Белый окрас" width="517">
-                        <img src="img/Cat3.jpg" alt="Пепельный окрас" width="471">
-                        <img src="img/Cat2.jpg" alt="Кофейный окрас" width="517">
+                    <div class="pets__photo--wrapper">
+                        <div class="pets__photo--inner">
+                            <img class="pets__photo" src="img/Cat1.jpg" alt="Белый окрас" width="517">
+                            <img class="pets__photo" src="img/Cat3.jpg" alt="Пепельный окрас" width="471">
+                            <img class="pets__photo" src="img/Cat2.jpg" alt="Кофейный окрас" width="517">
+                            <!-- <div class="pets__photo">
+                                <img class="pets__photo-img" src="img/Cat1.jpg" alt="Белый окрас" width="517">
+                            </div>
+                            <div class="pets__photo">
+                                <img class="pets__photo-img" src="img/Cat3.jpg" alt="Пепельный окрас" width="471">
+                            </div>
+                            <div class="pets__photo">
+                                <img class="pets__photo-img" src="img/Cat2.jpg" alt="Кофейный окрас" width="517">
+                            </div> -->
+                        </div>
                     </div>
                     <button class="pets__arrow pets__arrow--right button__arrow button__arrow--right"></button>
                 </div>
