header social and fonts woff

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кошачий питомник</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Yeseva+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -23,6 +22,29 @@
                 <div class="header__subtitle">Первый питомник с расширенным спектром услуг</div>
                 <a href="#" class="button header__btn">Смотерть котиков</a>
             </div>
+            <ul class="header__social social">
+                <li class="header__social-item header__social-item--fb social__item social__item--fb">
+                    <a href="#" aria-label="Мы в Фейсбуке">
+                        <svg class="header__social-svg" width="7" height="15">
+                            <use xlink:href="#fb"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="header__social-item header__social-item--tw social__item social__item--tw">
+                    <a href="#" aria-label="Мы в Твиттере">
+                        <svg class="header__social-svg" width="21" height="14">
+                            <use xlink:href="#tw"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="header__social-item header__social-item--vk social__item social__item--vk">
+                    <a href="#" aria-label="Мы в Вконтакте">
+                        <svg class="header__social-svg" width="22" height="12">
+                            <use xlink:href="#vk"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
         <img src="img/HeaderCat@2x.png" alt="Рыжий Мейн кун" width="900" class="header__cat">
     </header>
@@ -49,15 +71,6 @@
                             <img class="pets__photo" src="img/Cat1.jpg" alt="Белый окрас" width="517">
                             <img class="pets__photo" src="img/Cat3.jpg" alt="Пепельный окрас" width="471">
                             <img class="pets__photo" src="img/Cat2.jpg" alt="Кофейный окрас" width="517">
-                            <!-- <div class="pets__photo">
-                                <img class="pets__photo-img" src="img/Cat1.jpg" alt="Белый окрас" width="517">
-                            </div>
-                            <div class="pets__photo">
-                                <img class="pets__photo-img" src="img/Cat3.jpg" alt="Пепельный окрас" width="471">
-                            </div>
-                            <div class="pets__photo">
-                                <img class="pets__photo-img" src="img/Cat2.jpg" alt="Кофейный окрас" width="517">
-                            </div> -->
                         </div>
                     </div>
                     <button class="pets__arrow pets__arrow--right button__arrow button__arrow--right"></button>
